src/test/ui/error-codes/E0597.nll.stderr
error[E0597]: `y` does not live long enough
  --> $DIR/E0597.rs:18:16
   |
LL |     x.x = Some(&y);
   |                ^^ borrowed value does not live long enough
LL |     //~^ `y` does not live long enough [E0597]
LL | }
   | -
   | |
   | borrowed value only lives until here
   | borrow later used here, when `x` is dropped
   |
   = note: values in a scope are dropped in the opposite order they are defined

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
